outils/kubectl/recette-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: ghcr.io/cripsoo/projetcloud/backend-recette:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: cloud-secret
