outils/kubectl/recette-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: ghcr.io/cripsoo/projetcloud/frontend-recette:1.0.0
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: cloud-secret
